--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+}
+
 .firstgradient {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	margin: 50px;
